<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.vuk.foodhelper.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/Fragment_Home_Categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            app:tabIndicatorColor="@color/light_green_600"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/light_green_600"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@android:color/darker_gray"
            app:tabGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Home_Searchbox">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Beef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beef" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chicken" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Dessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dessert" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Goat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goat" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Miscellaneous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miscellaneous" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Pasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pasta" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Pork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pork" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Seafood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seafood" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/side" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Starter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starter" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/Fragment_Home_Categories_Vegetarian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetarian" />

        </com.google.android.material.tabs.TabLayout>

        <EditText
            android:id="@+id/Fragment_Home_Searchbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/adamina"
            android:hint="@string/write_main_ingredient"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/Fragment_Home_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> fragment.search()}"
            android:src="@drawable/ic_magnifier"
            app:layout_constraintBottom_toBottomOf="@id/Fragment_Home_Searchbox"
            app:layout_constraintEnd_toEndOf="@id/Fragment_Home_Searchbox"
            app:layout_constraintTop_toTopOf="@id/Fragment_Home_Searchbox" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Fragment_Home_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_margin="20dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Home_Categories"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
